--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,8 @@ ul{
 .container{
     margin-left: auto;
     margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
     width: 1200px;
 }
 
@@ -219,10 +221,12 @@ h3{
 }
 
 .item-descr{
-    background-color: rgba(47, 48, 58, 0.8);
     padding-top: 27px;
     padding-bottom: 27px;
+
+    color: var(--primary-color-white);
     text-align: center;
+    background-color: rgba(47, 48, 58, 0.8);
 }
 
 .team{
