--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ padding-top: 32px;
 padding-bottom: 32px;
 }
 
-.logo {
+.header__logo {
     margin-right: 86px;
 }
 
@@ -121,8 +121,11 @@ p{
 }
 
 .order{
+    padding: 10px 32px;
     min-width: 200px;
     background-color: var(--accent-color);
+    letter-spacing: 0.06em;
+    line-height: 1.87;
 }
 
 h1{
@@ -212,7 +215,7 @@ h3{
    }
 
 .wwedo .item{
-    width: calc ((100% - 60px) / 3);
+    width: calc((100% - 60px) / 3);
     margin-right: 30px;
 }
 
@@ -246,7 +249,7 @@ padding-bottom: 94px;
 }
 
 .team-list .item{
-    width: calc ((100% - 60px) / 3);
+    width: calc((100% - 60px) / 3);
     margin-right: 30px;
 }
 
@@ -339,18 +342,16 @@ b{
     display: inline-block;
     border: 1px solid transparent;
     border-radius: 4px;
-    padding: 10px 32px;
     
-
+    
     color: var(--primary-color-white);
     
-
     font-family: inherit;
     font-weight: bold;
     font-size: 16px;
-    line-height: 1.87;
+    
     text-align: center;
-    letter-spacing: 0.06em;
+    
 }
 
 .button:hover{
